--- a/ridge-regression.ipynb
+++ b/ridge-regression.ipynb
@@ -582,6 +582,15 @@
     "The root mean square errors of this model were determined, both for the training and test data sets. It was seen that the RMSE for the test data set was higher than for the training data set, as would be expected.\n",
     "Finally, the ideal alpha value of the ridge regression model was found using a gridsearch and cross validation. Unfortunately, this *ideal* alpha value did not improve either the RMSEs for the training nor test datasets."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References\n",
+    "\n",
+    "Dasgupta, S. (2019). EDX Course: Machine Learning Fundamentals. UCSanDiegoX. Retrieved from [https://www.edx.org/course/machine-learning-fundamentals-3]"
+   ]
   }
  ],
  "metadata": {
